--- a/ROC.Rmd
+++ b/ROC.Rmd
@@ -3,8 +3,15 @@ title: "The difficulty of diagnostics"
 subtitle: "ROC curves and thresholds in policy and public health"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output:
-  tufte::tufte_handout
+output: tint::tintPdf
+latexfonts:
+  - package: newtxmath
+    options: 
+      - cmintegrals
+      - cmbraces
+  - package: ebgaramond-maths
+header-includes:
+   - \usepackage{booktabs}
 ---
 
 ```{r setup, include=FALSE}
@@ -29,7 +36,7 @@ The world we live in may have absolute, black and white truths, indeed we have b
 
 Many years ago I spent an enlightening year as an AmeriCorp VISTA member helping administer a private energy assistance program. My job was to help people in need keep the power or heat on in their houses, mostly by helping pay down their overdue balances with money from private donations. I looked at individual applications, talked to them, and then decided whether we could help them and how. As a 22 year old college graduate, I had very little experience with people on the edge. I was often overwhelmed having to determine whether they were telling the truth, or whether they could follow through on their promises and payment plans I had arranged. It was gray as far as the eye could see. I was always a little relieved when people were clearly above the income cutoff; while I often felt bad that we couldn't help them, I wasn't forced to make a judgement about a person or their plight. 
 
-The problem was, I felt damned no matter what I did. If I was too liberal with assistance, I was surely helping people that were milking, if not cheating the system. Moreover, there was a real chance of not having enough money for the truly needy be the end of the season. On the other hand, if I were more skeptical or stringent, only helping where I felt certain that they were in over their head, through no (or little) fault of their own, and that they weren't coming to depend on our assistance, well then I was almost certainly excluding people that needed our help, but had a harder time making their case. I frequently sought the advice of the more seasoned women who ran other public programs, but learned I was going to quickly become cynical or apathetic if I kept trying to make these important decisions with very imperfect data. So I applied to graduate programs in biology in search of Truth^[With a capital "T".], or at least unambiguous facts and rigorously tested hypotheses.
+The problem was, I felt damned no matter what I did. If I was too liberal with assistance, I was surely helping people that were milking, if not cheating the system. Moreover, there was a real chance of not having enough money for the truly needy by the end of the season. On the other hand, if I were more skeptical or stringent, only helping where I felt certain that they were in over their head, through no (or little) fault of their own, and that they weren't coming to depend on our assistance, well then I was almost certainly excluding people that needed our help, but had a harder time making their case. I frequently sought the advice of the more seasoned women who ran other public programs, but learned I was going to quickly become cynical or apathetic if I kept trying to make these important decisions with very imperfect data. So I applied to graduate programs in biology in search of Truth^[With a capital "T".], or at least unambiguous facts and rigorously tested hypotheses.
 
 The irony is that that gray area of decision making is rampant in biology. Well, it's common in science in general, but maybe especially in my chosen field of disease ecology.  The difference is, I think, that in the sciences we are encouraged to be open about the uncertainty, about the gray areas, and also that we have some useful tools to deal with it. 
 
@@ -40,7 +47,7 @@ Consider the most essential aspect of a study about disease, determining whether
 If you've been infected with a pathogen and have recovered you have probably developed antibodies to many parts of that pathogen. So when someone draws your blood they can see if you have antibodies in it that react to those pathogen parts, called epitopes. If so, there's some signal, usually a color change depending on how the test is put together. But you might have a little signal while I produce a big one. For instance, individuals that were recently infected, are immunosuppressed, or are just, in the words of a friend and colleague, "wonky," and so they may be infected without producing many antibodies against the pathogen. Over all, there is a distribution of antibody reactions from infected individuals. 
 
 ```{r, fig.margin=TRUE, fig.cap="Hypothetical distributions of an antibody reaction (e.g., in an ELISA) from infected individuals."}
-P <- ggplot(NULL, aes(x = c(0, 100))) +
+P <- ggplot(data.frame(x=c(0,100)), aes(x = x)) +
   stat_function(fun = dnorm,
     geom = "area", fill = "red3",
     alpha = 0.3,
@@ -62,7 +69,7 @@ P
 You might expect this will be easy and all of the samples from uninfected individuals would be very low, maybe even zero. However, you, me, a mouse, or a bird all produce antibodies that cross react with pathogens we have never seen. There is always a bit of a signal. So while there is a different distribution of antibody reactions from uninfected individuals, it might overlap a bit with the infected distribution. In other words, there is almost always a gray area (OK, purplish in this figure) in terms of antibody titers or concentrations that includes both uninfected and infected individuals. 
 
 ```{r, fig.margin=TRUE, fig.cap="Hypothetical distributions of an antibody reaction (e.g., in an ELISA) from infected and uninfected individuals."}
-P <- ggplot(NULL, aes(x = c(0, 100))) +
+P <- ggplot(data.frame(x=c(0,100)), aes(x = x)) +
   stat_function(fun = dnorm,
                 geom = "area", fill = "steelblue",
                 alpha = 0.3,
@@ -89,7 +96,7 @@ P
 Because we are trying to categorize individuals into infected and uninfected categories, we need to choose some threshold amount of the reaction. Above this threshold the test is scored as positive, below it, negative. However, unless there is perfect separation^[Better diagnostic test have greater differentiation between the two distributions, but in most real-world cases, we cannot completely separate them.] (i.e., the two curves do not overlap) there will be some false positives (uninfected samples that test positive) or some false negatives (infected samples that test negative). While we can shift this threshold lower, say, to minimize the number of false negatives, by doing so we end up increasing the number of false positives! Or we could increase our threshold to ensure there were very few false positives, but that would come at the cost of more false negatives. There is an inherent trade-off between increased **sensitivity**---ensuring there are few or no false negatives---and **specificity**--ensuring there are few or no false positives.
 
 ```{r, fig.margin=TRUE, fig.cap=c("Hypothetical distributions of an antibody reaction (e.g., in an ELISA) from uninfected and infected individuals. Above some threshold amount of antibody reaction a sample is scored as positive (pink background) and below it is negative.","Same distributions, but the threshold has been moved to a lower, less stringent level so there are fewer false negatives, but more false positives.")}
-P <- ggplot(NULL, aes(x = c(0, 100))) +
+P <- ggplot(data.frame(x=c(0,100)), aes(x = x)) +
   stat_function(fun = dnorm,
                 geom = "area", fill = "steelblue",
                 alpha = 0.3,
@@ -220,11 +227,11 @@ Notice the two threshold we used above are plotted along this curve. The first w
 The beauty of these curves is that they help us visualize^[Try this [interactive app](https://kennis-research.shinyapps.io/ROC-Curves/) to get a better sense of how signal, noise, and thresholds interact.] how the rates of false negatives and false positives change as you move the threshold from more stringent (no false positives, but many false negatives) to less stringent (more false positives, but fewer false negatives).
 The ideal diagnostic test or radar system would produce a curve that is essentially a rectangle^[And the "area under the curve" (AUC), if you've run across this term, is one.] where there is a threshold value that perfectly delineated airplanes from birds, infected from uninfected individuals, the needy from the conniving. In this case there would be no overlap between the red and blue distributions in Figs. 1 & 2. 
 
-However, in the real world there is almost always some noise.  As the amount noise increases (i.e., the red and blue distributions overlap more and more), the distinction between infected and uninfected or plan and bird becomes more and more ambiguous and the ROC curve approaches the one-to-one line^[An AUC of 0.5.] (dotted line in Fig. 3). This is essentially the same as flipping a coin and saying if it's heads then the person is infected. Or more directly, the test is useless. Most of the time our diagnostic test or radar system falls somewhere in between, which means we have a trade-off between certainty that we will not miss an airplane or infection (low chance of false negatives) and an increase in false alarms (false positives). 
+However, in the real world there is almost always some noise.  As the amount of  noise increases (i.e., the red and blue distributions overlap more and more), the distinction between infected and uninfected, or plane and bird becomes, more and more ambiguous and the ROC curve approaches the one-to-one line^[An AUC of 0.5.] (dotted line in Fig. 3). This is essentially the same as flipping a coin and saying if it's heads then the person is infected. Or more directly, the test is useless. Most of the time our diagnostic test or radar system falls somewhere in between, which means we have a trade-off between certainty that we will not miss an airplane or infection (low chance of false negatives) and an increase in false alarms (false positives). 
 
 # What is the right threshold? Is there a right threshold?
 
-Where should a person draw the line, then? If you give the problem a bit of thought my guess is that you recommend finding the threshold that maximizes overall accuracy^[Accuracy $=\frac{TP + TN}{\text{All tests}}$] or, equivalently, minimizes the total number of false positives and false negatives. More accurate^[It is worth noting that if someone says a test if 97% accurate, you do not know if the inaccurate results are mostly false negatives or false positives or both. It is hard to summarize a test's performance in one single number!] is better, right? Well yes...so long as the costs of false negatives and false positives are the same. If you were a in charge of the radar system in WWII would you be more worried about the cost of scrambling your forces for no good reason in response to a false positive or about missing the first airplanes in an invasion due to overly stringent criteria and false negatives? Would you want the threshold that maximized accuracy or would you rather move that threshold a bit to ensure you had very, very few false negatives at the cost of perhaps a lot more false positives? The cost of scrambling your airplanes to intercept a phantom invader is not negligible, but is probably quite small relative to the cost of an enemy airplane going undetected in which case you might lose lives, a defensive post, or a battle. And so you will probably choose the less stringent threshold and a lot of false positives. In peacetime, however, your calculations probably change. 
+Where should a person draw the line, then? If you give the problem a bit of thought my guess is that you recommend finding the threshold that maximizes overall accuracy^[Accuracy $=\frac{TP + TN}{\text{All tests}}$] or, equivalently, minimizes the total number of false positives and false negatives. More accurate^[It is worth noting that if someone says a test if 97% accurate, you do not know if the inaccurate results are mostly false negatives or false positives or both. It is hard to summarize a test's performance in one single number!] is better, right? Well yes...so long as the costs of false negatives and false positives are the same. If you were in charge of the radar system in WWII would you be more worried about the cost of scrambling your forces for no good reason in response to a false positive or about missing the first airplanes in an invasion due to overly stringent criteria and false negatives? Would you want the threshold that maximized accuracy or would you rather move that threshold a bit to ensure you had very, very few false negatives at the cost of perhaps a lot more false positives? The cost of scrambling your airplanes to intercept a phantom invader is not negligible, but is probably quite small relative to the cost of an enemy airplane going undetected in which case you might lose lives, a defensive post, or a battle. And so you will probably choose the less stringent threshold and a lot of false positives. In peacetime, however, your calculations probably change. 
 
 The same is true when it comes to diagnostic tests. There is a debate raging over advice on who should get a mammogram and when. Epidemiologists have calculated that the combined costs of all of the false positive diagnoses---the unneeded treatments and surgery, not to mention the worry and expenses---outweigh the benefits of subjecting nearly all women over a certain age to the test in order to minimize the chances that a malignant tumor goes undetected. Or similarly, is it better to tweak the test to ensure we detect as many COVID-19 cases as possible, but inadvertently cause a bunch of uninfected people to have to quarantine themselves, or is it better to be able to trust that everyone who tests positive is really positive^[One way to express this is the utility of a test is the positive predictive value (=TP/(TP+FP)), sometimes called precision, which basically tell us the probability that a positive test is actually a true positive, and the negative predictive value (=TN/(TN+FN)), which is the reverse.]?  More on this later, but first we need to take a step back and see that the problem is actually much, much harder than we might like. 
 
@@ -232,7 +239,7 @@ The same is true when it comes to diagnostic tests. There is a debate raging ove
 
 Let us continue thinking about COVID-19 testing. There is surprisingly little publicly available information about diagnostic^[As opposed to analytic sensitivity, which measures how little of the virus can be detected.] sensitivity. In part this is because it is not clear how to determine who is _truly_ infected and who is _truly_ negative^[Usually one compares their test to a "gold standard," which is assumed to be correct, but in this case with a novel disease how can one be sure? This never an easy problem, but it's even harder in the middle of a fast-moving crisis!] and in part it is because the amount of virus (and antibodies) changes throughout an infection, varies among different classes of people, and so on. But let's simplify things and assume that real-time reverse-transcriptase PCR reactions, the basis of most tests, have a sensitivity of 0.95 (95%) and a specificity of 0.97 (97%). Not bad, right? (Most tests, especially those based on detecting viral antigens or antibodies, are almost certainly worse, especially on the sensitivity side of things, but let's just pretend.) 
 
-Now comes the wrinkle. Let's also assume that 1% of the population as a whole is infected. If we to randomly^[This is important in that if we just test sick people we would tend to have more infected people than the population average of 1%.] test 10,000 people we would expect 100 people to be really, truly infected and of those 95 would be correctly identified, leaving 5 false negatives. I guess we could live with that, although if we were thinking of Ebola virus infections that might be worrying! Now what about the 9,900 uninfected people? The vast majority, 9,603, would be correctly told they are not infected, but 3% of them, or 297 uninfected people would be told they _are_ infected. Or put another way, only 95/(95+297) = 24% of the people with positive test are actually infected! But wait, it can be even worse. In the earlier stages of the epidemic when only 0.1% of the population is infected 9 or 10 of the truly infected individuals would be detected, but  roughly 300 of the 9,990 uninfected people would have false positives, so only 10/(10+300) = ~3% of the positive tests would indicate true infections. 
+Now comes the wrinkle. Let's also assume that 1% of the population as a whole is infected. If we were to randomly^[This is important in that if we just test sick people we would tend to have more infected people than the population average of 1%.] test 10,000 people we would expect 100 people to be really, truly infected and of those 95 would be correctly identified, leaving 5 false negatives. I guess we could live with that, although if we were thinking of Ebola virus infections that might be worrying! Now what about the 9,900 uninfected people? The vast majority, 9,603, would be correctly told they are not infected, but 3% of them, or 297 uninfected people would be told they _are_ infected. Or put another way, only 95/(95+297) = 24% of the people with positive test are actually infected! But wait, it can be even worse. In the earlier stages of the epidemic when only 0.1% of the population is infected 9 or 10 of the truly infected individuals would be detected, but  roughly 300 of the 9,990 uninfected people would have false positives, so only 10/(10+300) = ~3% of the positive tests would indicate true infections. 
 
 We can formalize the probability that a person is truly infected ($I^+$) given a positive test ($T+$) using Bayes rule^[This theorem is fundamental in statistics, but not widely appreciated or intuited by most of us without formal training. Even if the math escapes you, focus on the logic.].
 
@@ -291,9 +298,11 @@ Before moving on, there is one important caveat to all of this. As noted above, 
 
 I hope I've convinced you that this seemingly simple task, sorting individuals into infected or uninfected bins, is actually much more difficult than it first seems. And there are always trade-offs lurking. Sure, we might gain sensitivity, but we do so at the cost of specificity. And depending on the context a positive test might not translate into a high probability that you are actually infected. So, what's a person to do?
 
-First, it is worth thinking about what we are trying to accomplish with a test. Tests are used for all sorts of things and pretending they are used in only one way is to ignore all of the trade-offs and potential biases we just learned. If we are thinking about you in a doctor's office getting back test results (or conversely, you, the doctor, giving someone the news) it is worth thinking about how well the test performs, whether you had a good chance of having whatever the test was for in the first place, and probably looking for some confirmation from other independent tests and context. In short, the test is useful, but would you base your healthcare^[Or someone's access to government assistance or guilt or innocence.] on any one diagnostic test? Alternatively, if we are interested in trying to estimate the prevalence of infection in the population, we can correct our estimates so long as we know the sensitivity and specificity. We may not know whether _this_ person or _that one_ is infected, but we could have a pretty good idea that, say, 20% of the population was infected, on average.   
+First, it is worth thinking about what we are trying to accomplish with a test. Tests are used for all sorts of things and pretending they are used in only one way is to ignore all of the trade-offs and potential biases we just learned. If we are thinking about you in a doctor's office getting back test results (or conversely, you, the doctor, giving someone the news) it is worth thinking about how well the test performs, whether you had a good chance of having whatever the test was for in the first place, and probably looking for some confirmation from other independent tests and context. In short, the test is useful, but would you base your healthcare^[Or someone's access to government assistance or guilt or innocence.] on any one diagnostic test? Alternatively, if we are interested in trying to estimate the prevalence of infection in the population, we can correct our estimates so long as we know the sensitivity and specificity. We may not know whether _this_ person or _that one_ is infected, but we could have a pretty good idea that, say, 20% of the population was infected, on average^[This is part of the rationalle for using fast, cheap, but crappy antibody-based tests for COVID-19. [Yes, they suck, but they can still give us a window on what's happening and, importantly, we get the answers back quickly!](https://www.nytimes.com/2020/08/06/health/rapid-Covid-tests.html).   
 
-Second, it pays to think about the costs of false negatives _and_ false positives^[My own opinion is that many conflicts boil down to some people focusing on one set of costs---such as missing a tumor or someone who honestly needs assistance---while others focus only on the costs of false positives---unnecessary health care interventions or welfare cheats.]. What are the costs of false positives? Perhaps many, many people being quarantined for no good reason, not to mention all of the stress and worry. What are the costs of missing a COVID-19 infection? A person might ignore their other symptoms because they thought they were clear, perhaps even die. At a larger scale, the infected person who thinks they are COVID-free might go on to infect (many) others and so the infection spreads. 
+Second, it is worth noting that we can be clever about our testing regime. For instance, we might employ a two-step approach for widespread testing. We would employ a test with high sensitivity, but low specificitity, for instance and antibody test tune for maximum sensitivity. This would ensure that few truly infected people test negative, but would yeild a _lot_ of false positives. Those false positives would then be re-tested with a separate test with much higher specificitity (e.g., a nucleic acid-based test) to sort out which of that big heap of "positives" from the first test were actually real. Most HIV screening is done this way and [many have recommended it for COVID-19 testing](https://www.forbes.com/sites/williamhaseltine/2020/08/07/two-step-testing-could-slow-covid-19-transmission-dramatically)^[Also, I _think_ that mortgage underwriters work this way...at least it would explain why they kept asking for the same information over and over again!].
+
+Third, it pays to think about the costs of false negatives _and_ false positives^[My own opinion is that many conflicts boil down to some people focusing on one set of costs---such as missing a tumor or someone who honestly needs assistance---while others focus only on the costs of false positives---unnecessary health care interventions or welfare cheats.]. What are the costs of false positives? Perhaps many, many people being quarantined for no good reason, not to mention all of the stress and worry. What are the costs of missing a COVID-19 infection? A person might ignore their other symptoms because they thought they were clear, perhaps even die. At a larger scale, the infected person who thinks they are COVID-free might go on to infect (many) others and so the infection spreads. 
 
 This highlights one other issue that crops up frequently when it comes to diagnostic testing: the right or optimal answer at an individual level is not necessarily the right or optimal answer for the population. A doctor might see the ghost of a tumor in a mammogram and recommend a biopsy if not a lumpectomy. Yes, it might have been a false positive, but the cost---an unnecessary procedure---seems small compared to letting a real tumor grow and, potentially, become much worse. An epidemiologist, who focuses on the whole population, might instead note that because tumors are fairly rare and mammograms imperfect, there are lots and lots of false positives the costs of which collectively outweight the benefits of catching a few tumors early. Both are "right," given their perspective, but they might strongly disagree about what is best. You could extend the same thinking to the TSA's security at airports or the Innocence Project's efforts to find and exonerate the wrongly convicted. Or even to all of those amazing people at offices across the nation trying to sort out who, among the many applicants, most need public assistance.  
 
